# flink-k8s-ui

./: .gitignore  README.md  package.json
.github/: dependabot.yml
.github/workflows/: ci-smoke.yml
apps/api-rs/: Cargo.toml
apps/api-rs/src/: auth.rs  config.rs  error.rs  main.rs  state.rs
apps/api-rs/src/adapters/: fixture.rs  flink.rs  k8s.rs  mod.rs
apps/api-rs/src/domain/: job.rs  mod.rs  normalize.rs
apps/api-rs/src/http/: metrics.rs  mod.rs  router.rs
apps/api-rs/src/http/handlers/: auth.rs  health.rs  jobmanager_proxy.rs  jobs.rs  mod.rs
apps/api-rs/src/service/: jobs_service.rs  mod.rs
apps/api/src/: config.js  server.js
apps/api/src/adapters/flink/: enrichJobs.js
apps/api/src/adapters/k8s/: flinkResources.js  normalize.js
apps/api/src/data/: jobsService.js
apps/api/src/routes/: health.js  jobs.js
apps/web/public/: app.js  index.html  render.js  styles.css
deploy/api/: .gitignore  Dockerfile  deployment.yaml  ingress.yaml  service.yaml
deploy/rbac/: api-reader.yaml
docs/architecture/: flink-job-ui-v1.md
docs/ops/: local-dev.md
fixtures/: jobs.json
scripts/: build.mjs  ci-smoke.mjs
tests/api/: enrichJobs.test.js  jobsRoute.test.js  normalize.test.js
tests/e2e/: apiContract.test.js  fixtureMode.test.js  rustParity.test.js
tests/web/: render.test.js
